[package]
name = "kronosx"
version = "0.1.0"
authors = ["Aidan <asmaidan@look.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "protos"
path = "src/protos/mod.rs"

[dependencies]
futures = "*"
protobuf = "*"
grpcio = "0.4"
protoc-grpcio = "1.0.2"
cryptoxide = "0.2.0"
bytes = "0.5.4"
libipld = "0.1.0"
cid = "*"
multihash = "0.10"
async-std = "1.5.0"
